[package]
name = "bdays"
version = "0.1.5-dev"
authors = ["Felipe Noronha <felipenoris@gmail.com>"]
license = "MIT"
description = "Business Days calendars for Rustaceans."
homepage = "https://github.com/felipenoris/bdays"
documentation = "https://docs.rs/bdays"
repository = "https://github.com/felipenoris/bdays"
keywords = ["date", "calendar", "finance"]
categories = ["date-and-time"]
readme = "README.md"
edition = "2021"

[dependencies]
chrono = { version = "0.4", default-features = false }

[dev-dependencies]
bencher = "0.1"

[[bench]]
name = "bench"
harness = false
